MicroServicio/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> select_statement
Rule 2     statement -> insert_statement
Rule 3     statement -> delete_statement
Rule 4     statement -> update_statement
Rule 5     statement -> create_table_statement
Rule 6     statement -> drop_table_statement
Rule 7     statement -> alter_table_statement
Rule 8     statement -> truncate_statement
Rule 9     statement -> show_tables_statement
Rule 10    statement -> describe_statement
Rule 11    select_statement -> SELECT column_list FROM ID where_clause SEMICOLON
Rule 12    select_statement -> SELECT STAR FROM ID where_clause SEMICOLON
Rule 13    insert_statement -> INSERT INTO ID LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
Rule 14    insert_statement -> INSERT INTO ID VALUES LPAREN value_list RPAREN SEMICOLON
Rule 15    delete_statement -> DELETE FROM ID where_clause SEMICOLON
Rule 16    update_statement -> UPDATE ID SET update_list where_clause SEMICOLON
Rule 17    create_table_statement -> CREATE TABLE ID LPAREN column_definitions RPAREN SEMICOLON
Rule 18    drop_table_statement -> DROP TABLE ID SEMICOLON
Rule 19    alter_table_statement -> ALTER TABLE ID ADD COLUMN column_definition SEMICOLON
Rule 20    alter_table_statement -> ALTER TABLE ID MODIFY COLUMN column_definition SEMICOLON
Rule 21    truncate_statement -> TRUNCATE TABLE ID SEMICOLON
Rule 22    show_tables_statement -> SHOW TABLES SEMICOLON
Rule 23    describe_statement -> DESCRIBE ID SEMICOLON
Rule 24    column_list -> ID
Rule 25    column_list -> column_list COMMA ID
Rule 26    value_list -> value
Rule 27    value_list -> value_list COMMA value
Rule 28    value -> NUMBER
Rule 29    value -> STRING
Rule 30    value -> ID
Rule 31    where_clause -> WHERE condition
Rule 32    where_clause -> <empty>
Rule 33    condition -> ID EQUALS value
Rule 34    update_list -> ID EQUALS value
Rule 35    update_list -> update_list COMMA ID EQUALS value
Rule 36    column_definitions -> column_definition
Rule 37    column_definitions -> column_definitions COMMA column_definition
Rule 38    column_definition -> ID data_type
Rule 39    column_definition -> ID data_type column_constraints
Rule 40    column_definition -> ID VARCHAR LPAREN NUMBER RPAREN
Rule 41    column_definition -> ID VARCHAR LPAREN NUMBER RPAREN column_constraints
Rule 42    data_type -> INT
Rule 43    data_type -> VARCHAR
Rule 44    column_constraints -> column_constraint
Rule 45    column_constraints -> column_constraints column_constraint
Rule 46    column_constraint -> AUTO_INCREMENT
Rule 47    column_constraint -> PRIMARY KEY

Terminals, with rules where they appear

ADD                  : 19
ALTER                : 19 20
AUTO_INCREMENT       : 46
COLUMN               : 19 20
COMMA                : 25 27 35 37
CREATE               : 17
DELETE               : 15
DESCRIBE             : 23
DROP                 : 18
EQUALS               : 33 34 35
FROM                 : 11 12 15
ID                   : 11 12 13 14 15 16 17 18 19 20 21 23 24 25 30 33 34 35 38 39 40 41
INSERT               : 13 14
INT                  : 42
INTO                 : 13 14
KEY                  : 47
LPAREN               : 13 13 14 17 40 41
MODIFY               : 20
NUMBER               : 28 40 41
PRIMARY              : 47
RPAREN               : 13 13 14 17 40 41
SELECT               : 11 12
SEMICOLON            : 11 12 13 14 15 16 17 18 19 20 21 22 23
SET                  : 16
SHOW                 : 22
STAR                 : 12
STRING               : 29
TABLE                : 17 18 19 20 21
TABLES               : 22
TRUNCATE             : 21
UPDATE               : 16
VALUES               : 13 14
VARCHAR              : 40 41 43
WHERE                : 31
error                : 

Nonterminals, with rules where they appear

alter_table_statement : 7
column_constraint    : 44 45
column_constraints   : 39 41 45
column_definition    : 19 20 36 37
column_definitions   : 17 37
column_list          : 11 13 25
condition            : 31
create_table_statement : 5
data_type            : 38 39
delete_statement     : 3
describe_statement   : 10
drop_table_statement : 6
insert_statement     : 2
select_statement     : 1
show_tables_statement : 9
statement            : 0
truncate_statement   : 8
update_list          : 16 35
update_statement     : 4
value                : 26 27 33 34 35
value_list           : 13 14 27
where_clause         : 11 12 15 16

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . select_statement
    (2) statement -> . insert_statement
    (3) statement -> . delete_statement
    (4) statement -> . update_statement
    (5) statement -> . create_table_statement
    (6) statement -> . drop_table_statement
    (7) statement -> . alter_table_statement
    (8) statement -> . truncate_statement
    (9) statement -> . show_tables_statement
    (10) statement -> . describe_statement
    (11) select_statement -> . SELECT column_list FROM ID where_clause SEMICOLON
    (12) select_statement -> . SELECT STAR FROM ID where_clause SEMICOLON
    (13) insert_statement -> . INSERT INTO ID LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (14) insert_statement -> . INSERT INTO ID VALUES LPAREN value_list RPAREN SEMICOLON
    (15) delete_statement -> . DELETE FROM ID where_clause SEMICOLON
    (16) update_statement -> . UPDATE ID SET update_list where_clause SEMICOLON
    (17) create_table_statement -> . CREATE TABLE ID LPAREN column_definitions RPAREN SEMICOLON
    (18) drop_table_statement -> . DROP TABLE ID SEMICOLON
    (19) alter_table_statement -> . ALTER TABLE ID ADD COLUMN column_definition SEMICOLON
    (20) alter_table_statement -> . ALTER TABLE ID MODIFY COLUMN column_definition SEMICOLON
    (21) truncate_statement -> . TRUNCATE TABLE ID SEMICOLON
    (22) show_tables_statement -> . SHOW TABLES SEMICOLON
    (23) describe_statement -> . DESCRIBE ID SEMICOLON

    SELECT          shift and go to state 12
    INSERT          shift and go to state 13
    DELETE          shift and go to state 14
    UPDATE          shift and go to state 15
    CREATE          shift and go to state 16
    DROP            shift and go to state 17
    ALTER           shift and go to state 18
    TRUNCATE        shift and go to state 19
    SHOW            shift and go to state 20
    DESCRIBE        shift and go to state 21

    statement                      shift and go to state 1
    select_statement               shift and go to state 2
    insert_statement               shift and go to state 3
    delete_statement               shift and go to state 4
    update_statement               shift and go to state 5
    create_table_statement         shift and go to state 6
    drop_table_statement           shift and go to state 7
    alter_table_statement          shift and go to state 8
    truncate_statement             shift and go to state 9
    show_tables_statement          shift and go to state 10
    describe_statement             shift and go to state 11

state 1

    (0) S' -> statement .



state 2

    (1) statement -> select_statement .

    $end            reduce using rule 1 (statement -> select_statement .)


state 3

    (2) statement -> insert_statement .

    $end            reduce using rule 2 (statement -> insert_statement .)


state 4

    (3) statement -> delete_statement .

    $end            reduce using rule 3 (statement -> delete_statement .)


state 5

    (4) statement -> update_statement .

    $end            reduce using rule 4 (statement -> update_statement .)


state 6

    (5) statement -> create_table_statement .

    $end            reduce using rule 5 (statement -> create_table_statement .)


state 7

    (6) statement -> drop_table_statement .

    $end            reduce using rule 6 (statement -> drop_table_statement .)


state 8

    (7) statement -> alter_table_statement .

    $end            reduce using rule 7 (statement -> alter_table_statement .)


state 9

    (8) statement -> truncate_statement .

    $end            reduce using rule 8 (statement -> truncate_statement .)


state 10

    (9) statement -> show_tables_statement .

    $end            reduce using rule 9 (statement -> show_tables_statement .)


state 11

    (10) statement -> describe_statement .

    $end            reduce using rule 10 (statement -> describe_statement .)


state 12

    (11) select_statement -> SELECT . column_list FROM ID where_clause SEMICOLON
    (12) select_statement -> SELECT . STAR FROM ID where_clause SEMICOLON
    (24) column_list -> . ID
    (25) column_list -> . column_list COMMA ID

    STAR            shift and go to state 24
    ID              shift and go to state 23

    column_list                    shift and go to state 22

state 13

    (13) insert_statement -> INSERT . INTO ID LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (14) insert_statement -> INSERT . INTO ID VALUES LPAREN value_list RPAREN SEMICOLON

    INTO            shift and go to state 25


state 14

    (15) delete_statement -> DELETE . FROM ID where_clause SEMICOLON

    FROM            shift and go to state 26


state 15

    (16) update_statement -> UPDATE . ID SET update_list where_clause SEMICOLON

    ID              shift and go to state 27


state 16

    (17) create_table_statement -> CREATE . TABLE ID LPAREN column_definitions RPAREN SEMICOLON

    TABLE           shift and go to state 28


state 17

    (18) drop_table_statement -> DROP . TABLE ID SEMICOLON

    TABLE           shift and go to state 29


state 18

    (19) alter_table_statement -> ALTER . TABLE ID ADD COLUMN column_definition SEMICOLON
    (20) alter_table_statement -> ALTER . TABLE ID MODIFY COLUMN column_definition SEMICOLON

    TABLE           shift and go to state 30


state 19

    (21) truncate_statement -> TRUNCATE . TABLE ID SEMICOLON

    TABLE           shift and go to state 31


state 20

    (22) show_tables_statement -> SHOW . TABLES SEMICOLON

    TABLES          shift and go to state 32


state 21

    (23) describe_statement -> DESCRIBE . ID SEMICOLON

    ID              shift and go to state 33


state 22

    (11) select_statement -> SELECT column_list . FROM ID where_clause SEMICOLON
    (25) column_list -> column_list . COMMA ID

    FROM            shift and go to state 34
    COMMA           shift and go to state 35


state 23

    (24) column_list -> ID .

    FROM            reduce using rule 24 (column_list -> ID .)
    COMMA           reduce using rule 24 (column_list -> ID .)
    RPAREN          reduce using rule 24 (column_list -> ID .)


state 24

    (12) select_statement -> SELECT STAR . FROM ID where_clause SEMICOLON

    FROM            shift and go to state 36


state 25

    (13) insert_statement -> INSERT INTO . ID LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (14) insert_statement -> INSERT INTO . ID VALUES LPAREN value_list RPAREN SEMICOLON

    ID              shift and go to state 37


state 26

    (15) delete_statement -> DELETE FROM . ID where_clause SEMICOLON

    ID              shift and go to state 38


state 27

    (16) update_statement -> UPDATE ID . SET update_list where_clause SEMICOLON

    SET             shift and go to state 39


state 28

    (17) create_table_statement -> CREATE TABLE . ID LPAREN column_definitions RPAREN SEMICOLON

    ID              shift and go to state 40


state 29

    (18) drop_table_statement -> DROP TABLE . ID SEMICOLON

    ID              shift and go to state 41


state 30

    (19) alter_table_statement -> ALTER TABLE . ID ADD COLUMN column_definition SEMICOLON
    (20) alter_table_statement -> ALTER TABLE . ID MODIFY COLUMN column_definition SEMICOLON

    ID              shift and go to state 42


state 31

    (21) truncate_statement -> TRUNCATE TABLE . ID SEMICOLON

    ID              shift and go to state 43


state 32

    (22) show_tables_statement -> SHOW TABLES . SEMICOLON

    SEMICOLON       shift and go to state 44


state 33

    (23) describe_statement -> DESCRIBE ID . SEMICOLON

    SEMICOLON       shift and go to state 45


state 34

    (11) select_statement -> SELECT column_list FROM . ID where_clause SEMICOLON

    ID              shift and go to state 46


state 35

    (25) column_list -> column_list COMMA . ID

    ID              shift and go to state 47


state 36

    (12) select_statement -> SELECT STAR FROM . ID where_clause SEMICOLON

    ID              shift and go to state 48


state 37

    (13) insert_statement -> INSERT INTO ID . LPAREN column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (14) insert_statement -> INSERT INTO ID . VALUES LPAREN value_list RPAREN SEMICOLON

    LPAREN          shift and go to state 49
    VALUES          shift and go to state 50


state 38

    (15) delete_statement -> DELETE FROM ID . where_clause SEMICOLON
    (31) where_clause -> . WHERE condition
    (32) where_clause -> .

    WHERE           shift and go to state 52
    SEMICOLON       reduce using rule 32 (where_clause -> .)

    where_clause                   shift and go to state 51

state 39

    (16) update_statement -> UPDATE ID SET . update_list where_clause SEMICOLON
    (34) update_list -> . ID EQUALS value
    (35) update_list -> . update_list COMMA ID EQUALS value

    ID              shift and go to state 53

    update_list                    shift and go to state 54

state 40

    (17) create_table_statement -> CREATE TABLE ID . LPAREN column_definitions RPAREN SEMICOLON

    LPAREN          shift and go to state 55


state 41

    (18) drop_table_statement -> DROP TABLE ID . SEMICOLON

    SEMICOLON       shift and go to state 56


state 42

    (19) alter_table_statement -> ALTER TABLE ID . ADD COLUMN column_definition SEMICOLON
    (20) alter_table_statement -> ALTER TABLE ID . MODIFY COLUMN column_definition SEMICOLON

    ADD             shift and go to state 57
    MODIFY          shift and go to state 58


state 43

    (21) truncate_statement -> TRUNCATE TABLE ID . SEMICOLON

    SEMICOLON       shift and go to state 59


state 44

    (22) show_tables_statement -> SHOW TABLES SEMICOLON .

    $end            reduce using rule 22 (show_tables_statement -> SHOW TABLES SEMICOLON .)


state 45

    (23) describe_statement -> DESCRIBE ID SEMICOLON .

    $end            reduce using rule 23 (describe_statement -> DESCRIBE ID SEMICOLON .)


state 46

    (11) select_statement -> SELECT column_list FROM ID . where_clause SEMICOLON
    (31) where_clause -> . WHERE condition
    (32) where_clause -> .

    WHERE           shift and go to state 52
    SEMICOLON       reduce using rule 32 (where_clause -> .)

    where_clause                   shift and go to state 60

state 47

    (25) column_list -> column_list COMMA ID .

    FROM            reduce using rule 25 (column_list -> column_list COMMA ID .)
    COMMA           reduce using rule 25 (column_list -> column_list COMMA ID .)
    RPAREN          reduce using rule 25 (column_list -> column_list COMMA ID .)


state 48

    (12) select_statement -> SELECT STAR FROM ID . where_clause SEMICOLON
    (31) where_clause -> . WHERE condition
    (32) where_clause -> .

    WHERE           shift and go to state 52
    SEMICOLON       reduce using rule 32 (where_clause -> .)

    where_clause                   shift and go to state 61

state 49

    (13) insert_statement -> INSERT INTO ID LPAREN . column_list RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (24) column_list -> . ID
    (25) column_list -> . column_list COMMA ID

    ID              shift and go to state 23

    column_list                    shift and go to state 62

state 50

    (14) insert_statement -> INSERT INTO ID VALUES . LPAREN value_list RPAREN SEMICOLON

    LPAREN          shift and go to state 63


state 51

    (15) delete_statement -> DELETE FROM ID where_clause . SEMICOLON

    SEMICOLON       shift and go to state 64


state 52

    (31) where_clause -> WHERE . condition
    (33) condition -> . ID EQUALS value

    ID              shift and go to state 66

    condition                      shift and go to state 65

state 53

    (34) update_list -> ID . EQUALS value

    EQUALS          shift and go to state 67


state 54

    (16) update_statement -> UPDATE ID SET update_list . where_clause SEMICOLON
    (35) update_list -> update_list . COMMA ID EQUALS value
    (31) where_clause -> . WHERE condition
    (32) where_clause -> .

    COMMA           shift and go to state 69
    WHERE           shift and go to state 52
    SEMICOLON       reduce using rule 32 (where_clause -> .)

    where_clause                   shift and go to state 68

state 55

    (17) create_table_statement -> CREATE TABLE ID LPAREN . column_definitions RPAREN SEMICOLON
    (36) column_definitions -> . column_definition
    (37) column_definitions -> . column_definitions COMMA column_definition
    (38) column_definition -> . ID data_type
    (39) column_definition -> . ID data_type column_constraints
    (40) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN
    (41) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN column_constraints

    ID              shift and go to state 70

    column_definitions             shift and go to state 71
    column_definition              shift and go to state 72

state 56

    (18) drop_table_statement -> DROP TABLE ID SEMICOLON .

    $end            reduce using rule 18 (drop_table_statement -> DROP TABLE ID SEMICOLON .)


state 57

    (19) alter_table_statement -> ALTER TABLE ID ADD . COLUMN column_definition SEMICOLON

    COLUMN          shift and go to state 73


state 58

    (20) alter_table_statement -> ALTER TABLE ID MODIFY . COLUMN column_definition SEMICOLON

    COLUMN          shift and go to state 74


state 59

    (21) truncate_statement -> TRUNCATE TABLE ID SEMICOLON .

    $end            reduce using rule 21 (truncate_statement -> TRUNCATE TABLE ID SEMICOLON .)


state 60

    (11) select_statement -> SELECT column_list FROM ID where_clause . SEMICOLON

    SEMICOLON       shift and go to state 75


state 61

    (12) select_statement -> SELECT STAR FROM ID where_clause . SEMICOLON

    SEMICOLON       shift and go to state 76


state 62

    (13) insert_statement -> INSERT INTO ID LPAREN column_list . RPAREN VALUES LPAREN value_list RPAREN SEMICOLON
    (25) column_list -> column_list . COMMA ID

    RPAREN          shift and go to state 77
    COMMA           shift and go to state 35


state 63

    (14) insert_statement -> INSERT INTO ID VALUES LPAREN . value_list RPAREN SEMICOLON
    (26) value_list -> . value
    (27) value_list -> . value_list COMMA value
    (28) value -> . NUMBER
    (29) value -> . STRING
    (30) value -> . ID

    NUMBER          shift and go to state 81
    STRING          shift and go to state 82
    ID              shift and go to state 78

    value_list                     shift and go to state 79
    value                          shift and go to state 80

state 64

    (15) delete_statement -> DELETE FROM ID where_clause SEMICOLON .

    $end            reduce using rule 15 (delete_statement -> DELETE FROM ID where_clause SEMICOLON .)


state 65

    (31) where_clause -> WHERE condition .

    SEMICOLON       reduce using rule 31 (where_clause -> WHERE condition .)


state 66

    (33) condition -> ID . EQUALS value

    EQUALS          shift and go to state 83


state 67

    (34) update_list -> ID EQUALS . value
    (28) value -> . NUMBER
    (29) value -> . STRING
    (30) value -> . ID

    NUMBER          shift and go to state 81
    STRING          shift and go to state 82
    ID              shift and go to state 78

    value                          shift and go to state 84

state 68

    (16) update_statement -> UPDATE ID SET update_list where_clause . SEMICOLON

    SEMICOLON       shift and go to state 85


state 69

    (35) update_list -> update_list COMMA . ID EQUALS value

    ID              shift and go to state 86


state 70

    (38) column_definition -> ID . data_type
    (39) column_definition -> ID . data_type column_constraints
    (40) column_definition -> ID . VARCHAR LPAREN NUMBER RPAREN
    (41) column_definition -> ID . VARCHAR LPAREN NUMBER RPAREN column_constraints
    (42) data_type -> . INT
    (43) data_type -> . VARCHAR

    VARCHAR         shift and go to state 88
    INT             shift and go to state 89

    data_type                      shift and go to state 87

state 71

    (17) create_table_statement -> CREATE TABLE ID LPAREN column_definitions . RPAREN SEMICOLON
    (37) column_definitions -> column_definitions . COMMA column_definition

    RPAREN          shift and go to state 90
    COMMA           shift and go to state 91


state 72

    (36) column_definitions -> column_definition .

    RPAREN          reduce using rule 36 (column_definitions -> column_definition .)
    COMMA           reduce using rule 36 (column_definitions -> column_definition .)


state 73

    (19) alter_table_statement -> ALTER TABLE ID ADD COLUMN . column_definition SEMICOLON
    (38) column_definition -> . ID data_type
    (39) column_definition -> . ID data_type column_constraints
    (40) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN
    (41) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN column_constraints

    ID              shift and go to state 70

    column_definition              shift and go to state 92

state 74

    (20) alter_table_statement -> ALTER TABLE ID MODIFY COLUMN . column_definition SEMICOLON
    (38) column_definition -> . ID data_type
    (39) column_definition -> . ID data_type column_constraints
    (40) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN
    (41) column_definition -> . ID VARCHAR LPAREN NUMBER RPAREN column_constraints

    ID              shift and go to state 70

    column_definition              shift and go to state 93

state 75

    (11) select_statement -> SELECT column_list FROM ID where_clause SEMICOLON .

    $end            reduce using rule 11 (select_statement -> SELECT column_list FROM ID where_clause SEMICOLON .)


state 76

    (12) select_statement -> SELECT STAR FROM ID where_clause SEMICOLON .

    $end            reduce using rule 12 (select_statement -> SELECT STAR FROM ID where_clause SEMICOLON .)


state 77

    (13) insert_statement -> INSERT INTO ID LPAREN column_list RPAREN . VALUES LPAREN value_list RPAREN SEMICOLON

    VALUES          shift and go to state 94


state 78

    (30) value -> ID .

    RPAREN          reduce using rule 30 (value -> ID .)
    COMMA           reduce using rule 30 (value -> ID .)
    WHERE           reduce using rule 30 (value -> ID .)
    SEMICOLON       reduce using rule 30 (value -> ID .)


state 79

    (14) insert_statement -> INSERT INTO ID VALUES LPAREN value_list . RPAREN SEMICOLON
    (27) value_list -> value_list . COMMA value

    RPAREN          shift and go to state 95
    COMMA           shift and go to state 96


state 80

    (26) value_list -> value .

    RPAREN          reduce using rule 26 (value_list -> value .)
    COMMA           reduce using rule 26 (value_list -> value .)


state 81

    (28) value -> NUMBER .

    RPAREN          reduce using rule 28 (value -> NUMBER .)
    COMMA           reduce using rule 28 (value -> NUMBER .)
    WHERE           reduce using rule 28 (value -> NUMBER .)
    SEMICOLON       reduce using rule 28 (value -> NUMBER .)


state 82

    (29) value -> STRING .

    RPAREN          reduce using rule 29 (value -> STRING .)
    COMMA           reduce using rule 29 (value -> STRING .)
    WHERE           reduce using rule 29 (value -> STRING .)
    SEMICOLON       reduce using rule 29 (value -> STRING .)


state 83

    (33) condition -> ID EQUALS . value
    (28) value -> . NUMBER
    (29) value -> . STRING
    (30) value -> . ID

    NUMBER          shift and go to state 81
    STRING          shift and go to state 82
    ID              shift and go to state 78

    value                          shift and go to state 97

state 84

    (34) update_list -> ID EQUALS value .

    COMMA           reduce using rule 34 (update_list -> ID EQUALS value .)
    WHERE           reduce using rule 34 (update_list -> ID EQUALS value .)
    SEMICOLON       reduce using rule 34 (update_list -> ID EQUALS value .)


state 85

    (16) update_statement -> UPDATE ID SET update_list where_clause SEMICOLON .

    $end            reduce using rule 16 (update_statement -> UPDATE ID SET update_list where_clause SEMICOLON .)


state 86

    (35) update_list -> update_list COMMA ID . EQUALS value

    EQUALS          shift and go to state 98


state 87

    (38) column_definition -> ID data_type .
    (39) column_definition -> ID data_type . column_constraints
    (44) column_constraints -> . column_constraint
    (45) column_constraints -> . column_constraints column_constraint
    (46) column_constraint -> . AUTO_INCREMENT
    (47) column_constraint -> . PRIMARY KEY

    RPAREN          reduce using rule 38 (column_definition -> ID data_type .)
    COMMA           reduce using rule 38 (column_definition -> ID data_type .)
    SEMICOLON       reduce using rule 38 (column_definition -> ID data_type .)
    AUTO_INCREMENT  shift and go to state 101
    PRIMARY         shift and go to state 102

    column_constraints             shift and go to state 99
    column_constraint              shift and go to state 100

state 88

    (40) column_definition -> ID VARCHAR . LPAREN NUMBER RPAREN
    (41) column_definition -> ID VARCHAR . LPAREN NUMBER RPAREN column_constraints
    (43) data_type -> VARCHAR .

    LPAREN          shift and go to state 103
    AUTO_INCREMENT  reduce using rule 43 (data_type -> VARCHAR .)
    PRIMARY         reduce using rule 43 (data_type -> VARCHAR .)
    RPAREN          reduce using rule 43 (data_type -> VARCHAR .)
    COMMA           reduce using rule 43 (data_type -> VARCHAR .)
    SEMICOLON       reduce using rule 43 (data_type -> VARCHAR .)


state 89

    (42) data_type -> INT .

    AUTO_INCREMENT  reduce using rule 42 (data_type -> INT .)
    PRIMARY         reduce using rule 42 (data_type -> INT .)
    RPAREN          reduce using rule 42 (data_type -> INT .)
    COMMA           reduce using rule 42 (data_type -> INT .)
    SEMICOLON       reduce using rule 42 (data_type -> INT .)


state 90
